# kernel

./: .gitignore  .gitmodules  ANREM_LICENSE  Makefile.am  README  README.md  configure.ac  makefile  project.mk  scope.mk
bootloader/: boot.fd  boot.iso  boot.out  boot.s  boot.sect  flat_mmap.ld  makefile  module.mk  stage2.c  stage2.h  stage2.s  types.h
bootloader/boot/: boot.hd  module.mk
bootloader/snippets/: stage1.S
bootloader/stage1/: module.mk  stage1.S  stage1.h  stage1.s
bootloader/stage2/: flat_mmap.ld  module.mk  stage2.S  stage2.c  stage2.h  stage2_asm.S  stage2_c.c
bootloader/stage2/Kernel/: Kernel.vbox  Kernel.vbox-prev
documentation/: gdt_documentation
exec-envir/: module.mk
exec-envir/boot/: module.mk
exec-envir/vmachine/: module.mk
mk/: alias.mk  config.mk  env.mk  functions.mk  hooks.mk  mod_template.mk  targets.mk
